# mq26

./: .env.demo  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app_main.py  broker_importer.py  config.py  dev_check.bat  docker-entrypoint.sh  gmail_reader.py  importar_reto2026.py  index.html  libro_mayor.py  migrar_gmail_a_sqlite.py  mq26_main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_mq26.py  start_mq26.bat  storytelling_inversor.html  top5_perlas_hoy.ps1
.claude/: launch.json  settings.local.json
.claude/agents/: explorador-mq26.md  revisor-quant.md  revisor-ux-mq26.md  verificador-mq26.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml  mq26.toml
1_Scripts_Motor/: __init__.py  config.py  data_engine.py  execution_engine.py  risk_engine.py
assets/: style.css  style_retail_light.css
commercial/landing/: apply-config.js  index.html  site.config.example.js
core/: api_contracts.py  audit.py  auth.py  auth_saas.py  byma_open_data_config.py  cache_manager.py  cartera_optima.py  cartera_scope.py  cliente_scope_ui.py  corporate_actions_proxy.py  data_providers.py  db_auditoria.py  db_auth.py  db_clientes.py  db_config.py  db_domains.py  db_manager.py  db_mercado.py  db_portfolio.py  diagnostico_types.py  evaluation_oos.py  export_lineage.py  feature_flags.py  fetcher_fundamentales.py  filtros_cartera.py  flow_manager.py  formato_montos.py  fx.py  historical_cache.py  historico_retornos.py  hrp_weights.py  hypothesis_metrics.py  import_fingerprint.py  instrument_master.py  macro_ar.py  macro_views.py  metricas_riesgo.py  mq26_disclaimers.py  notificaciones.py  otel_tracing.py  (+24 more)
data/: backtest_60d_whatsapp.txt  industry_benchmarks.json  pearl_symbols_ejemplo.txt  sectores.csv  top5_broken_symbols.json  top5_perlas_whatsapp.txt
data/bdi_reports/: JNJ_2026-06_auto.json  KO_2026-06_auto.json  META_2026-06_auto.json  NU_2026-06_auto.json  RTX_2026-06.json
docs/: BACKLOG_MOSCOW.md  DEPLOY_RAILWAY.md  GUIA_DEMO_10_USUARIOS.md  IOL_BOT_MVP.md  MAP_MQ26_ENTRYPOINTS.md  OPS_BACKUP_Y_MONITOREO.md  PLAN_CONTINGENCIA_Y_MEJORAS.md  PLAN_DE_MEJORA_2026-06.md  PLAN_MEJOR_OPTIMIZADOR_AR.md  PLAN_USABILIDAD_VENTA.md  PRODUCTO_ANALISIS_FUENTES_BACKLOG_2026.md  RUNBOOK_INCIDENTES_DEGRADACIONES.md  SMOKE_PRODUCCION.md  SOURCES.md
docs/adr/: 002-fuente-unica-persistencia.md  002-proveedores-datos-byma.md  003-convencion-precios-y-lineage.md
docs/backlog/: BLINDAJE_FASE2_50_MEJORAS.md
docs/commercial/: DEPLOY_LANDING.md  DISCLAIMERS_UX.md  GUIA_DEMO_30MIN.md  LEGAL_ENTREGA_ABOGADO.md  OPERACIONES_ADICIONALES.md  POLITICA_PRIVACIDAD_PLANTILLA.md  PRICING_B2B.md  WEBINAR_Y_CONTENIDO.md
docs/product/: BYMA_CAMPOS_Y_ESCALAS_MQ26.md  (+17 more)
migrations/: env.py
scripts/: actualizar_scores_diario.py  backup_sqlite_mvp.py  check_critical_module_lines.py  check_regressions.py  cron_update_adv_byma.py  cron_update_fundamentales.py  cron_update_macro.py  debug_pricing_snapshot.py  deploy_railway.sh  enviar_reportes_mensuales.py  etl_alfredo_excel.py  export_portability_bundle.py  fix_stretch_to_container_width.py  generate_demo_data.py  importar_rf_data912.py  iol_backtest_60d.py  iol_backtest_capital_windows.py  iol_bot_runner.py  iol_pearl_scanner.py  iol_sandbox_probe.py  iol_strategy_backtest.py  iol_top5_perlas_hoy.py  migrate_to_domain_dbs.py  package_sprint35.py  prepare_github_push.ps1  seed_carteras_ejemplo.py  smoke_entrypoints_nav.py  smoke_pipeline.py  smoke_produccion.py  validate_docs_entrypoints_runbook.py  valoracion_cobertura_audit.py  verify_ast.py
services/: analizador_ticker.py  app_user_service.py  audit_trail.py  backtest_signals.py  backtester_real.py  bdi_auto_generator.py  bdi_generator.py  bdi_reports.py  byma_market_data.py  byma_provider.py  byma_universo.py  byma_watchdog.py  cafci_connector.py  cartera_service.py  comparador_instrumentos.py  contenido_mercado.py  copy_inversor.py  correlaciones.py  data_bridge.py  data_quality.py  dcf_simple.py  decision_engine.py  diagnostico_cartera.py  email_sender.py  empresa_ficha.py  estado_universo_mq26.py  favoritos_mes.py  ficha_ticker.py  fundamental_cache.py  fundamentals_cache.py  guardrails.py  industry_benchmarks.py  informe_pdf.py  investor_hub_snapshot.py  mae_prices.py  metrics_service.py  mod23_service.py  monitor_service.py  motor_salida.py  multicuenta.py  (+31 more)
static/: robots.txt
tests/: conftest.py  test_actualizar_scores.py  test_alert_bot.py  test_alerts_risk_panel.py  test_analizador_ticker.py  test_api_optimize.py  test_app_user_service.py  test_audit_recomendaciones.py  test_audit_trail.py  test_auth.py  test_backtester.py  test_backtester_real.py  test_broker_importer_iol.py  test_byma_market_data.py  test_byma_open_data_config.py  test_byma_universo.py  test_byma_watchdog.py  test_cache_manager.py  test_cafci_connector.py  test_carga_activos.py  test_cartera_scope.py  test_cartera_service.py  test_cartera_service_ampliado.py  test_cartera_service_completo.py  test_comparador_instrumentos.py  test_copy_inversor.py  test_core_utils.py  test_correlaciones.py  test_data_bridge.py  test_data_engine_calendar.py  test_data_engine_rf_units.py  test_db_manager.py  test_decision_engine.py  test_demo_mode.py  test_diagnostico_cartera.py  test_diagnostico_types.py  test_docs_entrypoints_runbook_validator.py  test_efficient_frontier.py  test_ejecucion_service.py  test_entrypoints_roles_integration.py  (+102 more)
ui/: asesor_suite.py  carga_activos.py  color_palette.py  dashboard_ejecutivo.py  env_banner.py  monitor_on_usd.py  mq26_theme.py  mq26_ux.py  navigation.py  pantalla_ingreso.py  posiciones_broker_table.py  privacy_display.py  rbac.py  sidebar.py  suite_shell.py  tab_admin.py  tab_cartera.py  tab_ejecucion.py  tab_estudio.py  tab_inversor.py  tab_ledger.py  tab_mercado.py  tab_optimizacion.py  tab_perlas.py  tab_portfolio_optimizer.py  tab_reporte.py  tab_riesgo.py  tab_universo.py  workflow_header.py
(+238 files in other folders)
